blue-green-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: blue-green-service

spec:
    type: NodePort

    selector: 
      app: app
      version: blue
  
    ports:
      - port: 8080
        targetPort: 80
