canary-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: canary-service

spec:
    type: NodePort

    selector: 
      app: canary-app
      version: canary
  
    ports:
      - port: 80
        targetPort: 80
        protocol: TCP
