rolling-update-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: roll-update-service

spec:
    type: NodePort

    selector: 
      app: roll-update-app
  
    ports:
      - port: 8080
        targetPort: 80
