stable-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: stable-service

spec:
    type: NodePort

    selector: 
      app: canary-app
      version: stable
  
    ports:
      - port: 8080
        targetPort: 80
